# planificador-de-horarios

./: .cursorignore  .dockerignore  .envrc  .gcloudignore  .gitattributes  .gitignore  Makefile  README.md  cloudbuild.yaml  create-admin-job.sh  docker-compose.yml  env.example  pyproject.toml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  run_server.sh
backend/alembic/: env.py
backend/alembic/versions/: 25f1e2c68cb2_initial_schema_schedule_planner.py
backend/app/: __init__.py
backend/app/api/: assistant.py  auth.py  exports.py  projects.py  schedules.py  school_data.py  users.py
backend/app/core/: __init__.py  config.py  constants.py  dependencies.py  project_access.py  security.py  utils.py
backend/app/db/: __init__.py  enums.py  models.py  session.py
backend/app/schemas/: assistant.py  auth.py  project.py  schedule.py  school_data.py  user.py
backend/app/services/: __init__.py  schedule_actions.py  schedule_assistant.py  schedule_engine.py  schedule_exporter.py  schedule_service.py  school_data_parser.py  storage.py
backend/scripts/: check_db.py  e2e_storymap.xlsx  seed_user.py
docs/: DEPLOYMENT.md  setup.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  App.jsx  AuthContext.jsx  Layout.jsx  ProtectedRoute.jsx  api.js  index.css
frontend/src/components/: ErrorModal.jsx  FileInput.jsx  ScheduleAssistantWidget.jsx
frontend/src/pages/: DataImport.jsx  HomePage.jsx  Login.jsx  (+5 more)
scripts/: dev-up.md  update-docker-stack.sh
src/clients/: xai_async_client.py  xai_client.py
src/io/: excel_io.py
(+1 files in other folders)
